# mcp-corpus

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: black-box-client-verification.md  code-style.md  tool-contracts.md
src/mcp_corpus/: __init__.py  config.py  corpus.py  envelopes.py  server.py  validation.py
tests/: test_import.py  test_list_summaries.py  test_read_summary.py  test_save_markdown.py  test_server.py  test_validation.py
